--- a/src/styles.css
+++ b/src/styles.css
@@ -12,6 +12,9 @@ body {
   height: 100vh;
   width: 100%;
   padding: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .menu {
@@ -39,4 +42,21 @@ body {
 
 .menu .menu-item:hover {
   background: #343434;
+}
+
+.containerForCounter {
+  position: fixed;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  font-size: 25px;
+  top: 50px;
+  padding: 20px;
+  border-radius: 15px;
+  box-shadow: 10px 10px 3px #1b1a1a4c;
+}
+
+.call-message-container {
+  font-size: 25px;
+  text-align: center;
 }
