--- a/src/styles.css
+++ b/src/styles.css
@@ -59,3 +59,32 @@ body {
   font-size: 25px;
   text-align: center;
 }
+
+.container-hello {
+  text-align: center;
+  background: rgba(240, 202, 255, 0.784);
+  padding: 3rem;
+  border-radius: 20px;
+  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
+
+  max-width: 600px;
+}
+
+.container-hello h1 {
+  margin-bottom: 1.5rem;
+  font-weight: 400;
+  line-height: 1.4;
+}
+
+.container-hello h1:first-child {
+  font-size: 2.5rem;
+  color: #2c3e50;
+  font-weight: 100;
+}
+
+.container-hello h1:last-child {
+  font-size: 1.5rem;
+  color: #3e4545;
+  font-weight: 400;
+}
+
