--- a/src/styles.css
+++ b/src/styles.css
@@ -12,7 +12,7 @@ body {
   height: 100vh;
   width: 100%;
   padding: 2rem;
-  display: flex;
+  display: grid;
   justify-content: center;
   align-items: center;
 }
@@ -45,11 +45,15 @@ body {
 }
 .containerForCounter {
   position: fixed;
+  top: 50px;
+  left: 50%;
+  transform: translateX(-50%);
+
+  display: flex;
   justify-content: center;
   align-items: center;
-  display: flex;
+
   font-size: 25px;
-  top: 50px;
   padding: 20px;
   border-radius: 15px;
   box-shadow: 10px 10px 3px #1b1a1a4c;
@@ -58,6 +62,7 @@ body {
 .call-message-container {
   font-size: 25px;
   text-align: center;
+  position: fixed;
 }
 
 .container-hello {
@@ -87,4 +92,3 @@ body {
   color: #3e4545;
   font-weight: 400;
 }
-
